Fix velocity path resolution